src/App.css
@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;700&display=swap");


.App {
  position: relative;
  min-height: 100vh;
  font-family: IBM Plex Sans;
  font-weight: 400;
}

.title {
  text-align: left;
  color: white;
  background-color: #0f62fe;
  margin-top: 0px;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-left: 20px;
  border-bottom: 1.5px solid;
  border-bottom-color: black;
}

.article-component button {
  border-radius: 4px;
  margin-bottom: 10px;
  padding-top: 3px;
  padding-bottom: 3px;
  padding-left: 6px;
  padding-right: 6px;
  font-size: 14px;
  font-weight: 400;
  line-height: 21px;
  -webkit-box-shadow: 2px 2px 2px 0px rgba(0,0,0,0.1); 
  box-shadow: 2px 2px 2px 0px rgba(0,0,0,0.1);
  margin-left:90%;
  color:red;
}

.delete-button {
  border-radius: 4px;
  font-size: 14px;
  font-weight: 400;
  line-height: 21px;
  -webkit-box-shadow: 2px 2px 2px 0px rgba(0,0,0,0.1); 
  box-shadow: 2px 2px 2px 0px rgba(0,0,0,0.1);
  color:red;
}

.article-title {
  font-size: 22px;
  font-weight: bold;
  padding-left: 30px;
  padding-top: 20px;
}

.article-author {
  color: grey;
  font-size: 13px;
  padding-left: 30px;
  padding-top: 0px;
}


.dashboard-container {
  margin-left: 27%;
  width: 50%;
  padding-top: 110px;
}

.articles-container {
  width: 80%;
  padding-bottom: 8%;
}

.user-profile-container {

}

.footer-component {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 2.5rem;
  opacity: .4;
}

.footer-component h1 {
  text-align: center;
  font-size: 13px;
}

.header-component {
  width: 540px;
  height: 125px;
  position: absolute;
  left: 50%;
  margin-left: -270px;
}

.header-component h1 {
  text-align: center;
}

.header-component button {
  margin-right: 40px;
  margin-left: 90%;
}

.link-button {
  border: 0px;
  font: inherit;
  color: blue;
  text-decoration: underline;
  text-underline-position: below;
}

.login-form-component {
  padding-top: 20px;
  width: 800px;
  margin-left: 25%;
}

.general-button {
  margin-left: 10px;
  border-radius: 4px;
  margin-bottom: 10px;
  padding-top: 3px;
  padding-bottom: 3px;
  padding-left: 6px;
  padding-right: 6px;
  font-size: 14px;
  font-weight: 400;
  line-height: 21px;
  -webkit-box-shadow: 2px 2px 2px 0px rgba(0,0,0,0.1); 
  box-shadow: 2px 2px 2px 0px rgba(0,0,0,0.1);
}

.login-form-component label {
  margin-left: 10px;
  display: inline-block;
  text-align: right;
  margin-right: 7px;
  padding-right: 10px;
  margin-bottom: 10px;
  font-weight: 600;
}

.login-form-component input {
    font-size: 14px;
    font-weight: 400;
    line-height: 21px;
    width: 15%;
    height: 28px;
    background-color: rgb(252, 252, 251);
    outline: 0px;
    border-width: 1px;
    border-style: solid;
    border-color: rgba(0, 0, 0, 0.1);
    border-radius: 4px;
    padding-left: 5px;
    display: inline-block;
    margin-bottom: 10px;
}

.new-article-form-component button {
  border-radius: 4px;
  margin-bottom: 15px;
  padding-top: 3px;
  padding-bottom: 3px;
  padding-left: 6px;
  padding-right: 6px;
  font-size: 14px;
  font-weight: 400;
  line-height: 21px;
  -webkit-box-shadow: 2px 2px 2px 0px rgba(0,0,0,0.1); 
  box-shadow: 2px 2px 2px 0px rgba(0,0,0,0.1);
}

.new-article-form-component label {
  padding-right: 10px;
  margin-bottom: 10px;
  font-weight: 600;
}

.new-article-form-component input {
  font-size: 14px;
  font-weight: 400;
  line-height: 21px;
  width: 15%;
  height: 28px;
  background-color: rgb(252, 252, 251);
  outline: 0px;
  border-width: 1px;
  border-style: solid;
  border-color: rgba(0, 0, 0, 0.1);
  border-radius: 4px;
  padding-left: 5px;
  display: inline-block;
  margin-bottom: 10px;
}

.new-article-form-component .submit-btn {
}

.new-article-form-component textarea {
  background-color: rgb(252, 252, 251);
  border-width: 1px;
  border-style: solid;
  border-color: rgba(0, 0, 0, 0.1);
  border-radius: 4px;
  display: inline-block;
  height: 125px;
  font-size: 14px;
  font-weight: 400;
  line-height: 21px;
  margin-bottom: 10px;
  margin-top: 10px;
  outline: 0px;
  padding-left: 5px;
  width: 740px;
}

.new-user-form-component {
  padding-top: 20px;
  width: 800px;
  margin-left: 25%;
}

.new-user-form-component button {
  margin-left: 10px;
  border-radius: 4px;
  margin-bottom: 10px;
  padding-top: 3px;
  padding-bottom: 3px;
  padding-left: 6px;
  padding-right: 6px;
  font-size: 14px;
  font-weight: 400;
  line-height: 21px;
  -webkit-box-shadow: 2px 2px 2px 0px rgba(0,0,0,0.1); 
  box-shadow: 2px 2px 2px 0px rgba(0,0,0,0.1);
}

.new-user-form-component label {
  margin-left: 10px;
  display: inline-block;
  text-align: right;
  margin-right: 7px;
}

.new-user-form-component input {
  font-size: 14px;
  font-weight: 400;
  line-height: 21px;
  width: 15%;
  height: 28px;
  background-color: rgb(252, 252, 251);
  outline: 0px;
  border-width: 1px;
  border-style: solid;
  border-color: rgba(0, 0, 0, 0.1);
  border-radius: 4px;
  padding-left: 5px;
  display: inline-block;
  margin-bottom: 10px;
}

.new-article-form-component form {
  padding-bottom: 30px;
}

.article-component {
  width: 740px;
  border: 1px solid grey;
  padding-bottom: 10px;
  margin-bottom: 20px;
  overflow: scroll;
  border-radius: 4px;
  -webkit-box-shadow: 5px 5px 10px 0px rgba(0,0,0,0.18); 
  box-shadow: 5px 5px 10px 0px rgba(0,0,0,0.18);
  max-height: 350px;
}

.article-component hr {
  width: 640px;
  opacity: 2;
}

.article-component p {
  font-size: 15px;
  padding-left: 30px;
  padding-right: 30px;
}

.article-component h1 {
  font-size: 30px;
  font-weight: bold;
  padding-left: 30px;
  padding-top: 0px;
}

.article-component h2 {
  font-size: 15px;
  padding-left: 30px;
}

.user-profile-component {
  
}

